samples/_failures_safe/1761328757_a92c05_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b320a56.c: In function ‘main’:
./samples/SAFE/__tmp_7b320a56.c:155:5: error: expected expression at end of input
  155 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_7b320a56.c:155:5: error: expected declaration or statement at end of input
